# getpassword

./: LICENSE  README.md  pyproject.toml
src/getpassword/: __init__.py
src/readchar-readpass/: getpassword.py
