[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getpassword"
version = "0.1.0"
description = "A password reader."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Shuraim Ibrahim Khan", email="Uchihashuraim@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "readchar>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/Uchihashuraim/getpassword"
